# DocFlow

./: .gitignore  Dockerfile  LICENSE  README.md  extracted_content.txt  extracted_content_structured.json  pyproject.toml  test.py
docs/: database-storage-learning-guide.md  supabase-postgres.md
src/api/: app.py
src/api/core/: exception.py  middleware.py  response.py
src/api/routes/v1/: status.py  upload.py
src/config/: config.yaml
src/schemas/: extractor.py  input.py  translator.py
src/services/: document.py  extractor.py  logging.py  translator.py
test/: conftest.py  test_upload.py
