[project]
name = "docflow"
version = "0.1.0"
description = "A document translation app powered by models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi[standard]>=0.136.1",
    "gradio-client>=2.5.0",
    "msgspec>=0.21.1",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.28",
    "uuid6>=2025.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.11.1",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.1",
    "black>=24.3.0",
    "ruff>=0.15.12"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_scope = "function"